# OwlGate-Agents

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
catalogues/: sample-app.json
examples/: diff.json
src/owlgate_agents/: __init__.py  __main__.py  catalogue.py  flaky.py  gate_agent.py  healing_agent.py  models.py  pipeline.py  risk_agent.py  testcloud.py
tests/: test_catalogue.py  test_flaky.py  test_gate_agent.py  test_healing_agent.py  test_pipeline.py  test_review_targets.py  test_risk_agent.py  test_testcloud.py
uipath-agent/: README.md  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
uipath-agent/evaluations/eval-sets/: smoke-test.json
uipath-agent/evaluations/evaluators/: output-similarity.json
uipath-agent/examples/: run-input.json
uipath-agent/owlgate_agents/: base.py  catalogue.py  errors.py  gate_agent.py  models.py  risk_agent.py
