[project]
name = "owlgate-agents"
version = "0.0.1"
description = "OwlGate coded agents — Risk, Self-Healing, and Gate verdict for the UiPath Test Cloud release-gate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Yeo Wen Qin", email = "yeo_dev@protonmail.com" }]
dependencies = [
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owlgate_agents"]
